--- a/src/screens/styles/WebScreen.scss
+++ b/src/screens/styles/WebScreen.scss
@@ -7,7 +7,11 @@
   .carousel-indicator-div {
     position: fixed;
     top: 10%;
-    left: 37%;
+    left: 0%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   .carouselBody {
     display: flex;
